@@ -13,3 +13,9 @@ _Description: Yes
 Template: debconf/button-no
 Type: text
 _Description: No
+
+Template: debconf/help-line
+Type: text
+# Help line displayed at the bottom of the cdebconf newt interface.
+# Must fit within 80 characters.
+_Description: <Tab> moves between items; <Space> selects; <Enter> activates buttons
