@@ -6,6 +6,8 @@ cdebconf (0.81) UNRELEASED; urgency=low
     - Add a continue button to string and password questions in the newt
       frontend, although you can still just press Enter in the text entry
       box (closes: #257969).
+    - Document <Tab>, <Space>, and <Enter> in a help line for the newt
+      frontend (closes: #247233).
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 27 Jun 2005 23:07:42 +0100
 
